--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,4 +24,4 @@ jobs:
         python -m pip install --upgrade pip
     - name: Test with unittest
       run: |
-        python -m unittest discover -s . -p "tests.py" 
+        python -m unittest discover -s . -p "test.py" 
